--- a/kamp-frontend/northwind/src/app/app.component.html
+++ b/kamp-frontend/northwind/src/app/app.component.html
@@ -1,11 +1,17 @@
 
-<ul>
-  <li>Laptop</li>
-  <li>Mouse</li>
-  <li>Keyboard</li>
-  <li>Table</li>
-</ul>
+
+<div class="container">
+  <app-navi></app-navi>
+  <div class="row">
+    <!-- col-mad-"12max" -->
+    <div class="col-md-3">
+      <app-category></app-category>
+    </div>
+    <div class="col-md-9">
+      <app-product></app-product>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
+</div>
 
 
-
-<router-outlet></router-outlet>
