--- a/kamp-frontend/northwind/src/app/components/category/category.component.html
+++ b/kamp-frontend/northwind/src/app/components/category/category.component.html
@@ -1,4 +1,5 @@
 <ul class="list-group">
+    <li [class]="getAllCategoryClass()" routerLink = "/products">All products</li>
     <li (click) = "setCurrentCategory(category)" 
     routerLink = "/products/category/{{category.categoryId}}"
     *ngFor="let category of categories" 
