--- a/kamp-frontend/northwind/src/app/app.component.html
+++ b/kamp-frontend/northwind/src/app/app.component.html
@@ -6,6 +6,8 @@
     <!-- col-mad-"12max" -->
     <div class="col-md-3">
       <app-category></app-category>
+      <p></p>
+      <app-cart-summary></app-cart-summary>
     </div>
     <div class="col-md-9">
       <!-- <app-product></app-product> -->
