--- a/kamp-frontend/northwind/src/app/components/category/category.component.html
+++ b/kamp-frontend/northwind/src/app/components/category/category.component.html
@@ -7,4 +7,4 @@
     {{category.categoryName}}</li>
 </ul>
 
-<p *ngIf="currentCategory">{{currentCategory.categoryName}} selected</p> 
+<!-- <p *ngIf="currentCategory">{{currentCategory.categoryName}} selected</p>  -->
